fixed description in build script... doh

--- a/config.gradle
+++ b/config.gradle
@@ -12,10 +12,10 @@ config.archive.name = 'json-schema-builder'
 config.project = new HashMap<>()
 config.project.group       = 'lib'
 config.project.name        = 'Json Schema Builder'
-config.project.version     = '2.0.0'
+config.project.version     = '2.1.0'
 config.project.slug        = 'java-json-schema-builder'
 config.project.jvm         = '11'
-config.project.description = 'Checked variations for Java 8+ functional interfaces.'
+config.project.description = 'Java API for constructing json schema'
 config.project.site        = "${config.organization.site}/${config.project.slug}"
 config.project.vcs         = "${config.organization.site}/${config.project.slug}.git"
 config.project.tracker     = "${config.organization.site}/${config.project.slug}/issues"
